[package]
name = "mma7660fc"
version = "0.1.1"
authors = ["Rahul Thakoor <rahul.thakoor@gmail.com>"]
repository = "https://github.com/rahul-thakoor/mma7660fc"
license = "MIT/Apache-2.0"
description = "A platform agnostic driver to interface with the MMA7660FC 3-Axis Accelerometer via I2C"
readme = "README.md"
keywords = ["mma7660", "embedded-hal-driver","grove", "accelerometer", "seeed"]


[dependencies]
accelerometer = "0.5"
embedded-hal = "0.1.0"

cast="0.2.2"

[dev-dependencies]
linux-embedded-hal = "0.1.1"
